# lDockingWidget

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ldocking/: __init__.py  bootstrap.py  enums.py  ldock_area.py  ldock_tab_area.py  ldock_widget.py  ldrag_manager.py  ldrop_indicator.py  lmain_window.py  ltitle_bar.py  monkey.py  stylesheet_compat.py
tests/: compare_scenarios.py  conftest.py  demo_app.py  dock_panels.py  dock_qss_fixtures.py  parity_demo.py  parity_test.py  phase0_bug_demo.py  phase1_floating.py  phase2_docking.py  phase3_tabbing.py  phase4_full.py  phase5_compat.py  screenshot_compare.py  tabified_visual.py  test_api_compat.py  test_api_gaps.py  test_behavioral.py  test_dock_stability.py  test_dynamic_compare.py  test_monkey.py  test_monkey_apps.py  test_parity_behavioral.py  test_parity_matrix.py  test_screenshot_compare.py  test_stability.py  test_state.py  test_visual_parity.py  visual_compare_demo.py
tests/fixtures/: loadui_qmainwindow.ui
tools/dock_benchmarks/: README.md  benchmark_local_fixture.py  benchmark_official_dockwidgets.py  inspect_labelme_docks.py
tools/dock_benchmarks/fixtures/: labelme_shape_app.py  qt_abstraction.py  qtpy_style_app.py
