[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ldocking"
version = "0.1.0"
description = "Drop-in replacement for QDockWidget/QMainWindow using splitter-based layout"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["pyside6", "qt", "dock", "dockwidget", "mainwindow", "splitter", "gui"]
dependencies = [
    "PySide6>=6.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/cantelli/lDockingWidget"
Source = "https://github.com/cantelli/lDockingWidget"
"Bug Tracker" = "https://github.com/cantelli/lDockingWidget/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["ldocking"]
